tests/ext/invalid/Ensures_CompileFail_1.whiley
import whiley.lang.*:*

int f() ensures 2*$==1:
    return 1

void System::main([string] args):
    debug str(f())
